tests/soundness/token_aliasing_exploit.stderr
error[E0080]: index out of bounds: the length is 1 but the index is 1
  --> tests/soundness/token_aliasing_exploit.rs:15:1
   |
15 | #[arcane]
   | ^^^^^^^^^ evaluation of `evil::_` failed here
   |
   = note: this error originates in the attribute macro `arcane` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `token`
  --> tests/soundness/token_aliasing_exploit.rs:16:9
   |
16 | fn evil(token: X64V3Token, data: &[f32; 8]) -> f32 {
   |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_token`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
